Add Dockerfile for Hugging Face deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 streamlit
 pandas
 numpy
-matplotlib
-seaborn
+nltk
 wordcloud
 emoji
+textblob
 urlextract
 fpdf2
-nltk
-textblob
-python-dateutil
+Pillow
+matplotlib
+seaborn
+preprocessor
